fix photo bug on mobile

--- a/style.css
+++ b/style.css
@@ -164,10 +164,12 @@ p {
     border-radius: 60px;
 }
 
-@media (max-width:700px) {
+@media (max-width:500px) {
     .photo img {
-        width: 400px;
+        width: 100%;
+        margin:auto;
         margin-top: 1.6rem;
+        border-radius: 30px;
     }
 }
 
@@ -356,5 +358,4 @@ aside h2 {
         font-size: 2rem;
         margin-bottom: 2rem;
     }
-    
 }
